[tool.poetry]
name = "tiralabra-rsa"
version = "0.1.0"
description = ""
authors = ["Joona <joona.kauranen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
miller-rabin = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.5.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
